Version 2.02.46 - 
================================
  Tidy clvmd volume lock cache functions.
  Fix pvs report for orphan PVs when segment attributes are requested.
  Fix pvs -a output to not read volume groups from non-PV devices.
  Add MMC (mmcblk) device type to filters.
  Introduce memory pools per volume group (to reduce memory for large VGs).
  Add memory pool leaks detection.
  Use copy of PV structure when manipulating with global PV lists.
  Always return exit error status when locking of volume group fails.
  Fix mirror log convert validation question.
  Avoid referencing files from DESTDIR during build process.
  Avoid creating some static libraries without static_link.
  Enable use of cached metadata for pvs and pvdisplay commands.
  Add missing 'device-mapper' internal subdir build dependency.
  Fix memory leak in mirror allocation code.
  Save and restore the previous logging level when log level is changed.
  Fix error message when archive initialization fails.
  Make sure clvmd-corosync releases the lockspace when it exits.
  Fix segfault for vgcfgrestore on VG with missing PVs.
  Block SIGTERM & SIGINT in clvmd subthreads.
  Detect and conditionally wipe swapspace signatures in pvcreate.
  Fix maximal volume count check for snapshots if max_lv set for volume group.
  Fix lvcreate to remove cow volume if the snapshot creation fails.
  Fix error messages when PV uuid or pe_start reading fails.
  Rename liblvm.a to liblvm-internal.a and build new application library.
  Flush memory pool and fix locking in clvmd refresh and backup command.
  Fix unlocks in clvmd-corosync. Broken in 2.02.45.
  Fix error message when adding metadata directory to internal list fails.
  Fix size and error message of memory allocation at backup initialization.
  Remove old metadata backup file after renaming vg.
  Restore log_suppress state when metadata backup file is up-to-date.

Version 2.02.45 - 3rd March 2009
================================